--- a/charts/sampleapp/sampleapp/values.yaml
+++ b/charts/sampleapp/sampleapp/values.yaml
@@ -1,16 +1,9 @@
-# Default values for sampleapp.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
 replicaCount: 2
 
 image:
-  repository: registry.mtnirancell.ir/devops/apitask
+  repository: nimmagh/apitask
   tag: v0.0.5
   pullPolicy: Always
-
-nameOverride: ""
-fullnameOverride: ""
 
 service:
   type: ClusterIP
@@ -18,13 +11,12 @@ service:
 
 ingress:
   hosts:
-    name: apitask.dtl1.mtnirancell.ir
+    name: HOSTNAME
 
 application:
   environments:
-    DJANGO_DB_USER: 'root'
-    DJANGO_DB_HOST: '10.130.17.146'
+    DJANGO_DB_USER: 'DBUSER'
+    DJANGO_DB_HOST: 'DBHOSTIP'
     DJANGO_DB_PORT: 30357
-    DJANGO_DB_NAME: 'GUTS_TASK'
-    DJANGO_DB_PASS: 'mysql'
-    MYSQL_ROOT_PASSWORD: 'mysql'
+    DJANGO_DB_NAME: 'DBNAME'
+    DJANGO_DB_PASS: 'DBPASS'
